--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | BomberDron</title>
-    
-    <a href="DarkRift.Server.Console">exe</a>
+    <title>Unity DR | DR</title>   
+    <a href="DarkRift.Server.Console">GOOOO</a>
   </head>
   <body>
     <div class="webgl-content">
