--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity DR | DR</title>   
-    <a href="DarkRift.Server.Console">GOOOO</a>
+    <a href="">GOOOO</a>
   </head>
   <body>
     <div class="webgl-content">
